[gd_scene load_steps=14 format=3 uid="uid://dikixve6nm4hu"]

[ext_resource type="Script" path="res://scripts/menu/Menu.gd" id="1_qvv2l"]
[ext_resource type="Theme" uid="uid://dhmtnj7vvtt4h" path="res://main_theme.tres" id="2_yrhm4"]
[ext_resource type="FontFile" uid="uid://cgtlxpefvcma1" path="res://fonts/Silver.ttf" id="3_x65dv"]
[ext_resource type="Texture2D" uid="uid://winvk38y5c0r" path="res://prefabs/skeleton/Skeleton.png" id="5_vddye"]
[ext_resource type="Texture2D" uid="uid://dl2q1k7ngmok6" path="res://textures/ClayTotem.png" id="6_p6hhh"]
[ext_resource type="Texture2D" uid="uid://cd6j2u5g0j3e" path="res://prefabs/player/Player.png" id="7_1njm0"]

[sub_resource type="Animation" id="Animation_iybgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_36cqw"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0698132, 0.0, 0.0698132, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2com"]
_data = {
"RESET": SubResource("Animation_iybgg"),
"idle": SubResource("Animation_36cqw")
}

[sub_resource type="GDScript" id="GDScript_6f0ty"]
script/source = "extends AnimationPlayer


func _ready():
	play(\"idle\")
"

[sub_resource type="GDScript" id="GDScript_7240m"]
script/source = "extends Label


func _ready():
	text = \"Survival time: \" + Global.time_survived
"

[sub_resource type="GDScript" id="GDScript_h4w72"]
script/source = "extends Label


func _ready():
	text = \"Enemies killed: \" + str(Global.enemies_killed)
"

[sub_resource type="GDScript" id="GDScript_5iav6"]
script/source = "extends Label


func _ready():
	text = \"Character level: \" + str(Global.max_level)
"

[node name="GameOver" type="Node2D"]
script = ExtResource("1_qvv2l")
is_menu = false

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -23.0
offset_top = -11.0
offset_right = 1938.0
offset_bottom = 1095.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_yrhm4")

[node name="name" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -970.0
offset_top = 21.0
offset_right = 966.0
offset_bottom = 396.0
grow_horizontal = 2
pivot_offset = Vector2(977, 178)
theme_override_colors/font_color = Color(0.780392, 0.14902, 0.14902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_x65dv")
theme_override_font_sizes/font_size = 220
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/name"]
libraries = {
"": SubResource("AnimationLibrary_c2com")
}
speed_scale = 0.5
script = SubResource("GDScript_6f0ty")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = 133.0
offset_right = 306.0
offset_bottom = 439.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="Control/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="TextureButton" parent="Control/VBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
offset_top = 12.0
offset_right = 618.0
offset_bottom = 92.0
pivot_offset = Vector2(307, 44)
toggle_mode = true
button_pressed = true
action_mode = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/Control/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(311, 48)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 84
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="Control/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ExitButton" type="TextureButton" parent="Control/VBoxContainer/Control3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
offset_top = 4.0
offset_right = 618.0
offset_bottom = 84.0
pivot_offset = Vector2(317, 43)
toggle_mode = true
action_mode = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/Control3/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(317, 43)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 84
text = "Back to menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurvivalTime" type="Label" parent="Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 288.0
offset_right = 1920.0
offset_bottom = 382.0
pivot_offset = Vector2(93, 35)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 84
text = "Survival time: 1:23"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_7240m")

[node name="EnemiesKilled" type="Label" parent="Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 376.0
offset_right = 1920.0
offset_bottom = 470.0
pivot_offset = Vector2(93, 35)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 84
text = "Enemies killed: 123"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_h4w72")

[node name="CharacterLevel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 466.0
offset_right = 1920.0
offset_bottom = 560.0
pivot_offset = Vector2(93, 35)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 84
text = "Character level: 10"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_5iav6")

[node name="Skeleton" type="Sprite2D" parent="."]
position = Vector2(1665, 838)
rotation = 0.0698132
scale = Vector2(-22, 22)
texture = ExtResource("5_vddye")

[node name="ClayTotem" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(173, 982)
scale = Vector2(22, 22)
texture = ExtResource("6_p6hhh")

[node name="Player" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(205, 858)
rotation = -0.044815
scale = Vector2(22, 22)
texture = ExtResource("7_1njm0")

[connection signal="mouse_entered" from="Control/VBoxContainer/Control/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/Control/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Control3/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/Control3/ExitButton" to="." method="_on_exit_button_pressed"]
